--- a/style.css
+++ b/style.css
@@ -1,52 +1,49 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
-}
-.wrapper{
+    margin: 0;
+  }
+  
+  .loading-container {
+    perspective: 800px;
+  }
+  
+  .loading {
+    width: 40px;
+    height: 40px;
+    background-color: #3498db;
     position: relative;
-    width: 350px;
-    height: 350px;
-}
-.item{
+    margin: 0 auto;
+    transform-style: preserve-3d;
+    animation: rotate 1.5s infinite linear;
+  }
+  
+  .loading:before,
+  .loading:after {
+    content: '';
+    position: absolute;
     width: 100%;
     height: 100%;
-    transform: rotate(-90deg);
-}
-.circle{
-    fill: none;
-    stroke: #ddd;
-    stroke-width: 36px;
-    stroke-dasharray: 735.48;
-    stroke-dashoffset: 0;
-}
-.bar{
-    fill: none;
-    stroke: orangered;
-    stroke-width: 35px;
-    stroke-dasharray: 735.48;
-    stroke-dashoffset: 0;
-    animation: animate 2.5s ease-in-out forwards;
-}
-.content{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1.4);
-    font-size: 50px;
-    font-weight: bold;
-    font-family: bebas neue;
-}
-@keyframes animate{
-    from{
-        stroke-dashoffset: 735.48;
+    background-color: inherit;
+    opacity: 0.5;
+  }
+  
+  .loading:before {
+    transform: rotateY(90deg);
+  }
+  
+  .loading:after {
+    transform: rotateX(90deg);
+  }
+  
+  @keyframes rotate {
+    0% {
+      transform: rotateX(0deg) rotateY(0deg);
     }
-    to{
-        stroke-dashoffset: calc(735.48 - (735.48* 100) / 100);
+    100% {
+      transform: rotateX(360deg) rotateY(360deg);
     }
-}
+  }
+  
